# nl2sql-clickhouse

./: .env.example  .gitignore  README.md  orchestrator.py  pyproject.toml  query_orchestrator.py  test_code.ipynb  test_vector_search.py  update_learnings_kb.py
src/: config.py  dspy_modules.py  generate_ch_metadata.py  metadata_generator.py  query_processor.py  sql_executor.py  sql_extractor.py  vector_store.py
